--- a/privacy/index.html
+++ b/privacy/index.html
@@ -72,7 +72,7 @@ Una cadena anónima creada a partir de tu dirección de correo electrónico (tam
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="https://mfreri.github.io/web/">Marcelo Freri</a>
+      <a class="navbar-brand" href="https://mfreri.github.io/web">Marcelo Freri</a>
     </div>
     
     <div id="huxblog_navbar">
@@ -421,7 +421,7 @@ Una cadena anónima creada a partir de tu dirección de correo electrónico (tam
           <br>
           Themed by <a href="https://github.com/roninro/hugo-theme-puppet/" target="_blank">Puppet</a>
           <br>
-          <a href="https://mfreri.github.io/web//privacy/">Política de Privacidad</a>
+          <a href="https://mfreri.github.io/web/privacy/">Política de Privacidad</a>
         </p>
       </div>
     </div>
