--- a/about/index.html
+++ b/about/index.html
@@ -72,7 +72,7 @@ Mi inquebrantable curiosidad me llevó a explorar los sistemas operativos de ser
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="https://mfreri.github.io/web/">Marcelo Freri</a>
+      <a class="navbar-brand" href="https://mfreri.github.io/web">Marcelo Freri</a>
     </div>
     
     <div id="huxblog_navbar">
@@ -443,7 +443,7 @@ Mi inquebrantable curiosidad me llevó a explorar los sistemas operativos de ser
           <br>
           Themed by <a href="https://github.com/roninro/hugo-theme-puppet/" target="_blank">Puppet</a>
           <br>
-          <a href="https://mfreri.github.io/web//privacy/">Política de Privacidad</a>
+          <a href="https://mfreri.github.io/web/privacy/">Política de Privacidad</a>
         </p>
       </div>
     </div>
