--- a/products/index.html
+++ b/products/index.html
@@ -71,7 +71,7 @@ Automatización de ProcesosLa automatización de servidores se refiere al proces
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="https://mfreri.github.io/web/">Marcelo Freri</a>
+      <a class="navbar-brand" href="https://mfreri.github.io/web">Marcelo Freri</a>
     </div>
     
     <div id="huxblog_navbar">
@@ -418,7 +418,7 @@ Automatización de ProcesosLa automatización de servidores se refiere al proces
           <br>
           Themed by <a href="https://github.com/roninro/hugo-theme-puppet/" target="_blank">Puppet</a>
           <br>
-          <a href="https://mfreri.github.io/web//privacy/">Política de Privacidad</a>
+          <a href="https://mfreri.github.io/web/privacy/">Política de Privacidad</a>
         </p>
       </div>
     </div>
