Cambié sólo por solamente. Tonterías de la RAE.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <title>mfreri@web</title>
   <meta name="author" content="Marcelo Freri">
   <meta name="description" content="En un mundo cada vez más digitalizado, la base de cualquier organización exitosa radica en una infraestructura tecnológica sólida y en el conocimiento y habilidades de su equipo humano.
-Mi objetivo es brindar servicios tecnológicos de alta calidad que no solo aborden tus necesidades específicas, sino que también se centren en fortalecer los fundamentos de tu negocio. Juntos, podemos construir una base sólida para el éxito empresarial en la era digital.">
+Mi objetivo es brindar servicios tecnológicos de alta calidad que no solamente aborden tus necesidades específicas, sino que también se centren en fortalecer los fundamentos de tu negocio. Juntos, podemos construir una base sólida para el éxito empresarial en la era digital.">
   <meta name="keywords" content='blog,developer,sysadmin,marcelo,freri,español,uruguay,linux,asesor'>
 
   <meta name="twitter:card" content="summary"/>
@@ -202,7 +202,7 @@ Mi objetivo es brindar servicios tecnológicos de alta calidad que no solo abord
           
 
   <p>En un mundo cada vez más digitalizado, la base de cualquier organización exitosa radica en una infraestructura tecnológica sólida y en el conocimiento y habilidades de su equipo humano.</p>
-<p>Mi objetivo es brindar servicios tecnológicos de alta calidad que no solo aborden tus necesidades específicas, sino que también se centren en fortalecer los fundamentos de tu negocio. Juntos, podemos construir una base sólida para el éxito empresarial en la era digital.</p>
+<p>Mi objetivo es brindar servicios tecnológicos de alta calidad que no solamente aborden tus necesidades específicas, sino que también se centren en fortalecer los fundamentos de tu negocio. Juntos, podemos construir una base sólida para el éxito empresarial en la era digital.</p>
 <p>Explora mis servicios y descubre cómo podemos avanzar juntos hacia un futuro tecnológico más sólido y eficiente.</p>
 <h5 id="qué-puedo-ofrecerteproducts"><a href="/products/">¿Qué puedo ofrecerte?</a><a class="anchorjs-link" href="#qu%c3%a9-puedo-ofrecerteproducts"></a></h5>
 
