Contact links and update Linux's logs post

--- a/about/index.html
+++ b/about/index.html
@@ -30,7 +30,7 @@
   <meta name="description" content="Hola, soy Marcelo Freri, un informático con más de 30 años de experiencia, incluyendo 10 dedicado al sector industrial.
 Una Historia de Aprendizaje ContinuoMi apasionante viaje en el mundo de la tecnología comenzó en 1992, cuando me adentré en la programación de forma autodidacta, desde Basic hasta Turbo Pascal. Con tan solo 15 años, escribí y comercialicé mi primer programa.
 Mi inquebrantable curiosidad me llevó a explorar los sistemas operativos de servidores utilizados por las grandes corporaciones, incluyendo OS/2, Novell Netware, Windows NT y Linux.">
-  <meta name="keywords" content='blog,developer,sysadmin,marcelo,freri,español,uruguay,linux,asesor'>
+  <meta name="keywords" content='blog,developer,sysadmin,marcelo,freri,español,uruguay,linux,servidores'>
 
   <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Acerca de mí"/>
@@ -57,10 +57,10 @@ Mi inquebrantable curiosidad me llevó a explorar los sistemas operativos de ser
 
   <link rel="alternate" type="application/rss+xml" href="/about/index.xml" title="Marcelo Freri" />
   
-    <link rel="apple-touch-icon" sizes="180x180" href='/apple-touch-icon.png'>
-    <link rel="icon" type="image/png" sizes="32x32" href='/favicon-32x32.png'>
-    <link rel="icon" type="image/png" sizes="16x16" href='/favicon-16x16.png'>
-    <link rel="manifest" href='/site.webmanifest'>
+    <link rel="apple-touch-icon" href='/apple-touch-icon.png'>
+    <link rel="shortcut icon" href='/favicon.png' type="image/x-icon">
+    <link rel="shortcut icon" href='/favicon.ico' type="image/x-icon">
+    <link rel="icon" href='/favicon.svg' sizes="any" type="image/svg+xml" />
   
 
 </head>
@@ -228,7 +228,7 @@ Mi inquebrantable curiosidad me llevó a explorar los sistemas operativos de ser
 <p><a href="/docs/google.pdf">Programación aplicada a servidores</a>, por Google</p>
 </li>
 <li>
-<p><a href="/docs/jovian.pdf">Analista de Datos</a>, por Jovian</p>
+<p><a href="/docs/jovian.pdf">Análisis de Datos</a>, por Jovian</p>
 </li>
 <li>
 <p><a href="/docs/nexxt.pdf">Certificación en Redes WiFi</a>, por Nexxt Solutions</p>
@@ -237,14 +237,8 @@ Mi inquebrantable curiosidad me llevó a explorar los sistemas operativos de ser
 <p><a href="/docs/programador.pdf">Programador</a>, por Escuela de Informática</p>
 </li>
 </ul>
-<h2 id="información-de-contacto">Información de Contacto<a class="anchorjs-link" href="#informaci%c3%b3n-de-contacto"></a></h2><ul>
-<li>
-<p><a href="/mailto:contacto@mfreri.com">Correo electrónico</a></p>
-</li>
-<li>
-<p><a href="https://t.me/mfreri" target="_blank">Telegram</a></p>
-</li>
-</ul>
+<hr>
+<p><a href="/contact/">Contacta conmigo</a> para más información.</p>
 
 </div>
 
