--- a/privacy/index.html
+++ b/privacy/index.html
@@ -30,7 +30,7 @@
   <meta name="description" content="Quiénes somosLa dirección de nuestra web es: https://mfreri.com.
 ComentariosCuando los visitantes dejan comentarios en la web, recopilamos los datos que se muestran en el formulario de comentarios, así como la dirección IP del visitante y la cadena de agentes de usuario del navegador para ayudar a la detección de spam.
 Una cadena anónima creada a partir de tu dirección de correo electrónico (también llamada hash) puede ser proporcionada al servicio de Gravatar para ver si la estás usando.">
-  <meta name="keywords" content='blog,developer,sysadmin,marcelo,freri,español,uruguay,linux,asesor'>
+  <meta name="keywords" content='blog,developer,sysadmin,marcelo,freri,español,uruguay,linux,servidores'>
 
   <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Política de Privacidad"/>
@@ -57,10 +57,10 @@ Una cadena anónima creada a partir de tu dirección de correo electrónico (tam
 
   <link rel="alternate" type="application/rss+xml" href="/privacy/index.xml" title="Marcelo Freri" />
   
-    <link rel="apple-touch-icon" sizes="180x180" href='/apple-touch-icon.png'>
-    <link rel="icon" type="image/png" sizes="32x32" href='/favicon-32x32.png'>
-    <link rel="icon" type="image/png" sizes="16x16" href='/favicon-16x16.png'>
-    <link rel="manifest" href='/site.webmanifest'>
+    <link rel="apple-touch-icon" href='/apple-touch-icon.png'>
+    <link rel="shortcut icon" href='/favicon.png' type="image/x-icon">
+    <link rel="shortcut icon" href='/favicon.ico' type="image/x-icon">
+    <link rel="icon" href='/favicon.svg' sizes="any" type="image/svg+xml" />
   
 
 </head>
