--- a/products/index.html
+++ b/products/index.html
@@ -29,7 +29,7 @@
   <meta name="author" content="Marcelo Freri">
   <meta name="description" content="Administración de Sistemas y ServidoresCon 10 años de experiencia como Administrador de Sistemas, puedes ofrecer servicios de configuración, administración y mantenimiento de servidores, incluyendo la implementación de soluciones de virtualización.
 Automatización de ProcesosLa automatización de servidores se refiere al proceso de utilizar herramientas y scripts para realizar tareas repetitivas y administrativas en servidores de manera eficiente y consistente, sin la necesidad de intervención manual constante. Esto aumenta la eficiencia operativa y reduce los errores.">
-  <meta name="keywords" content='blog,developer,sysadmin,marcelo,freri,español,uruguay,linux,asesor'>
+  <meta name="keywords" content='blog,developer,sysadmin,marcelo,freri,español,uruguay,linux,servidores'>
 
   <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Servicios"/>
@@ -56,10 +56,10 @@ Automatización de ProcesosLa automatización de servidores se refiere al proces
 
   <link rel="alternate" type="application/rss+xml" href="/products/index.xml" title="Marcelo Freri" />
   
-    <link rel="apple-touch-icon" sizes="180x180" href='/apple-touch-icon.png'>
-    <link rel="icon" type="image/png" sizes="32x32" href='/favicon-32x32.png'>
-    <link rel="icon" type="image/png" sizes="16x16" href='/favicon-16x16.png'>
-    <link rel="manifest" href='/site.webmanifest'>
+    <link rel="apple-touch-icon" href='/apple-touch-icon.png'>
+    <link rel="shortcut icon" href='/favicon.png' type="image/x-icon">
+    <link rel="shortcut icon" href='/favicon.ico' type="image/x-icon">
+    <link rel="icon" href='/favicon.svg' sizes="any" type="image/svg+xml" />
   
 
 </head>
