--- a/about/index.html
+++ b/about/index.html
@@ -30,7 +30,7 @@
   <meta name="description" content="Hola, soy Marcelo Freri, un informático con más de 30 años de experiencia, incluyendo 10 dedicado al sector industrial.
 Una Historia de Aprendizaje ContinuoMi apasionante viaje en el mundo de la tecnología comenzó en 1992, cuando me adentré en la programación de forma autodidacta, desde Basic hasta Turbo Pascal. Con tan solo 15 años, escribí y comercialicé mi primer programa.
 Mi inquebrantable curiosidad me llevó a explorar los sistemas operativos de servidores utilizados por las grandes corporaciones, incluyendo OS/2, Novell Netware, Windows NT y Linux.">
-  <meta name="keywords" content='blog,developer,sysadmin,marcelo,freri,español,uruguay,linux,servidores'>
+  <meta name="keywords" content='marcelo, freri, linux, servidores, redes, asesor, administrador, sistemas'>
 
   <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Acerca de mí"/>
