--- a/cloud/index.html
+++ b/cloud/index.html
@@ -28,7 +28,7 @@
   <title>mCloud | Marcelo Freri</title>
   <meta name="author" content="Marcelo Freri">
   <meta name="description" content="Scomparto di Archiviazione a la NuvolaUn posto dove condividere documenti, foto, video e molto altro, in modo rapido e riservato.">
-  <meta name="keywords" content='blog,developer,sysadmin,marcelo,freri,español,uruguay,linux,servidores'>
+  <meta name="keywords" content='marcelo, freri, linux, servidores, redes, asesor, administrador, sistemas'>
 
   <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="mCloud"/>
