--- a/privacy/index.html
+++ b/privacy/index.html
@@ -30,7 +30,7 @@
   <meta name="description" content="Quiénes somosLa dirección de nuestra web es: https://mfreri.com.
 ComentariosCuando los visitantes dejan comentarios en la web, recopilamos los datos que se muestran en el formulario de comentarios, así como la dirección IP del visitante y la cadena de agentes de usuario del navegador para ayudar a la detección de spam.
 Una cadena anónima creada a partir de tu dirección de correo electrónico (también llamada hash) puede ser proporcionada al servicio de Gravatar para ver si la estás usando.">
-  <meta name="keywords" content='blog,developer,sysadmin,marcelo,freri,español,uruguay,linux,servidores'>
+  <meta name="keywords" content='marcelo, freri, linux, servidores, redes, asesor, administrador, sistemas'>
 
   <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Política de Privacidad"/>
