--- a/products/index.html
+++ b/products/index.html
@@ -30,7 +30,7 @@
   <meta name="description" content="Administración de Bases de DatosUna base de datos bien diseñada y mantenida es esencial para la eficiencia, la toma de decisiones informadas y la seguridad en entornos tecnológicos.
 Administración de Sistemas y ServidoresCon mi basta experiencia como Administrador de Sistemas, puedo ofrecerte servicios de configuración, administración y mantenimiento de servidores, incluyendo la implementación de soluciones de virtualización.
 Asesoría TecnológicaConsulta con un experto en tecnología aplicada, para ayudarte a tomar decisiones estratégicas relacionadas con la infraestructura tecnológica de tu empresa o emprendimiento.">
-  <meta name="keywords" content='blog,developer,sysadmin,marcelo,freri,español,uruguay,linux,servidores'>
+  <meta name="keywords" content='marcelo, freri, linux, servidores, redes, asesor, administrador, sistemas'>
 
   <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Servicios"/>
