Added Instagram link to socials

--- a/products/index.html
+++ b/products/index.html
@@ -350,7 +350,7 @@ Asesoría TecnológicaConsulta con un experto en tecnología aplicada, para ayud
 
 
 <li>
-  <a href="https://pixelfed.social/i/web/profile/499625507351759099" target="_blank">
+  <a href="https://www.instagram.com/mfreri/" target="_blank">
     <span class="fa-stack fa-lg">
       <i class="fa fa-circle fa-stack-2x"></i>
       <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
@@ -403,7 +403,7 @@ Asesoría TecnológicaConsulta con un experto en tecnología aplicada, para ayud
 
 
 <li>
-  <a href="https://pixelfed.social/i/web/profile/499625507351759099" target="_blank">
+  <a href="https://www.instagram.com/mfreri/" target="_blank">
     <span class="fa-stack fa-lg">
       <i class="fa fa-circle fa-stack-2x"></i>
       <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
