--- a/contact/index.html
+++ b/contact/index.html
@@ -338,7 +338,7 @@
 
 
 <li>
-  <a href="https://pixelfed.social/i/web/profile/499625507351759099" target="_blank">
+  <a href="https://www.instagram.com/mfreri/" target="_blank">
     <span class="fa-stack fa-lg">
       <i class="fa fa-circle fa-stack-2x"></i>
       <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
@@ -391,7 +391,7 @@
 
 
 <li>
-  <a href="https://pixelfed.social/i/web/profile/499625507351759099" target="_blank">
+  <a href="https://www.instagram.com/mfreri/" target="_blank">
     <span class="fa-stack fa-lg">
       <i class="fa fa-circle fa-stack-2x"></i>
       <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
