--- a/privacy/index.html
+++ b/privacy/index.html
@@ -352,7 +352,7 @@ Una cadena anónima creada a partir de tu dirección de correo electrónico (tam
 
 
 <li>
-  <a href="https://pixelfed.social/i/web/profile/499625507351759099" target="_blank">
+  <a href="https://www.instagram.com/mfreri/" target="_blank">
     <span class="fa-stack fa-lg">
       <i class="fa fa-circle fa-stack-2x"></i>
       <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
@@ -405,7 +405,7 @@ Una cadena anónima creada a partir de tu dirección de correo electrónico (tam
 
 
 <li>
-  <a href="https://pixelfed.social/i/web/profile/499625507351759099" target="_blank">
+  <a href="https://www.instagram.com/mfreri/" target="_blank">
     <span class="fa-stack fa-lg">
       <i class="fa fa-circle fa-stack-2x"></i>
       <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
