--- a/about/index.html
+++ b/about/index.html
@@ -445,7 +445,7 @@ Mi inquebrantable curiosidad me llevó a explorar los sistemas operativos de ser
         <p class="copyright text-muted">
           Copyright © Marcelo Freri 2024  
           <br>
-          Powered by <a href="https://gohugo.io" target="_blank">Hugo</a> and <a href="https://github.com/" target="_blank">GitHub</a>
+          Powered by <a href="https://gohugo.io" target="_blank">Hugo</a>
           <br>
           Themed by <a href="https://github.com/roninro/hugo-theme-puppet/" target="_blank">Puppet</a>
           <br>
