--- a/privacy/index.html
+++ b/privacy/index.html
@@ -429,7 +429,7 @@ Una cadena anónima creada a partir de tu dirección de correo electrónico (tam
         <p class="copyright text-muted">
           Copyright © Marcelo Freri 2024  
           <br>
-          Powered by <a href="https://gohugo.io" target="_blank">Hugo</a> and <a href="https://github.com/" target="_blank">GitHub</a>
+          Powered by <a href="https://gohugo.io" target="_blank">Hugo</a>
           <br>
           Themed by <a href="https://github.com/roninro/hugo-theme-puppet/" target="_blank">Puppet</a>
           <br>
