--- a/products/index.html
+++ b/products/index.html
@@ -427,7 +427,7 @@ Asesoría TecnológicaConsulta con un experto en tecnología aplicada, para ayud
         <p class="copyright text-muted">
           Copyright © Marcelo Freri 2024  
           <br>
-          Powered by <a href="https://gohugo.io" target="_blank">Hugo</a> and <a href="https://github.com/" target="_blank">GitHub</a>
+          Powered by <a href="https://gohugo.io" target="_blank">Hugo</a>
           <br>
           Themed by <a href="https://github.com/roninro/hugo-theme-puppet/" target="_blank">Puppet</a>
           <br>
