New about section

--- a/en/404.html
+++ b/en/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
   
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-QCZ9LYZBKV"></script>
   <script>
@@ -30,17 +30,14 @@
   <meta name="description" content="Efficient solutions with cutting-edge technology">
   <meta name="keywords" content='marcelo, freri, linux, servidores, redes, asesor, administrador, sistemas'>
 
-  
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="404 Page not found">
-  <meta name="twitter:description" content="Efficient solutions with cutting-edge technology">
+  <meta name="twitter:card" content="summary"/>
+<meta name="twitter:title" content="404 Page not found"/>
+<meta name="twitter:description" content="Efficient solutions with cutting-edge technology"/>
 
-  <meta property="og:url" content="http://localhost:1313/en/404.html">
-  <meta property="og:site_name" content="Marcelo Freri">
-  <meta property="og:title" content="404 Page not found">
-  <meta property="og:description" content="Efficient solutions with cutting-edge technology">
-  <meta property="og:locale" content="en">
-  <meta property="og:type" content="website">
+  <meta property="og:title" content="404 Page not found" />
+<meta property="og:description" content="Efficient solutions with cutting-edge technology" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://mfreri.com/en/404.html" />
 
   <link rel="stylesheet" href='/css/bootstrap.min.css'  crossorigin="anonymous">
 
@@ -79,7 +76,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="http://localhost:1313/">Marcelo Freri</a>
+      <a class="navbar-brand" href="https://mfreri.com">Marcelo Freri</a>
     </div>
     
     <div id="huxblog_navbar">
@@ -242,7 +239,7 @@
           <br>
           Themed by <a href="https://github.com/roninro/hugo-theme-puppet/" target="_blank">Puppet</a>
           <br>
-          <a href="http://localhost:1313//privacy/">Política de Privacidad</a>
+          <a href="https://mfreri.com/privacy/">Política de Privacidad</a>
         </p>
       </div>
     </div>
@@ -268,6 +265,19 @@
 
 
 
+
+
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QCZ9LYZBKV"></script>
+<script>
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+	gtag('config', 'G-QCZ9LYZBKV', { 'anonymize_ip': false });
+}
+</script>
 
 
 
